prepare new minor release 1.2

--- a/src/main/java/io/github/astrapi69/checksum/package.html
+++ b/src/main/java/io/github/astrapi69/checksum/package.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>
-        de.alpharogroup.checksum
+        io.github.astrapi69.checksum
     </title>
 </head>
 <body>
